--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -78,7 +78,23 @@ jobs:
           mkdir -p ~/apps/image-generation
           cd ~/apps/image-generation
           
-          # ===== STEP 0: Install AWS CLI if not present =====
+          # ===== STEP 0a: Install Docker if not present =====
+          if ! command -v docker &> /dev/null; then
+            echo "Installing Docker..."
+            sudo apt-get update -qq
+            sudo apt-get install -y ca-certificates curl gnupg
+            sudo install -m 0755 -d /etc/apt/keyrings
+            curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg
+            sudo chmod a+r /etc/apt/keyrings/docker.gpg
+            echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu $(. /etc/os-release && echo "$VERSION_CODENAME") stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+            sudo apt-get update -qq
+            sudo apt-get install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
+            sudo usermod -aG docker $USER
+            sudo systemctl enable docker
+            sudo systemctl start docker
+          fi
+          
+          # ===== STEP 0b: Install AWS CLI if not present =====
           if ! command -v aws &> /dev/null; then
             echo "Installing AWS CLI..."
             # Install unzip if not present
@@ -116,7 +132,7 @@ jobs:
           fi
           
           # ===== STEP 4: Login to ECR =====
-          aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | docker login --username AWS --password-stdin $ECR_REGISTRY
+          aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | sudo docker login --username AWS --password-stdin $ECR_REGISTRY
           
           # ===== STEP 5: Write Environment File =====
           cat << 'ENVEOF' > .env
@@ -125,18 +141,18 @@ jobs:
           
           # ===== STEP 6: Stop and Remove Old Container =====
           echo "Stopping previous container..."
-          docker stop grovio-images-api || true
-          docker rm grovio-images-api || true
+          sudo docker stop grovio-images-api || true
+          sudo docker rm grovio-images-api || true
           
           echo "Removing previous image..."
-          docker rmi $IMAGE || true
+          sudo docker rmi $IMAGE || true
           
           # ===== STEP 7: Pull and Run New Container =====
           echo "Pulling latest image..."
-          docker pull $IMAGE
+          sudo docker pull $IMAGE
           
           echo "Starting container..."
-          docker run -d \
+          sudo docker run -d \
             --name grovio-images-api \
             --restart unless-stopped \
             --env-file .env \
@@ -144,9 +160,9 @@ jobs:
             $IMAGE
           
           echo "Pruning dangling images..."
-          docker image prune -f
+          sudo docker image prune -f
           
           echo "=========================================="
           echo "Production deployment completed successfully!"
-          docker ps | grep grovio-images-api
+          sudo docker ps | grep grovio-images-api
           echo "=========================================="
