--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,12 @@ GROVIO_API_KEY="your-grovio-api-key-here"
 OPENAI_API_KEY="your-openai-api-key-here"
 OPENAI_MODEL="gpt-5.1"
 
+# =============================================================================
+# Bytedance (BytePlus ModelArk) API Key for Seedream models
+# Get your key from: https://console.byteplus.com/modelark
+# =============================================================================
+BYTEDANCE_API_KEY="your-bytedance-api-key-here"
+
 # Server Configuration
 HOST=0.0.0.0
 PORT=5005
